--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -10,11 +10,11 @@ steps:
     args: ["-m","pytest","--junitxml=test_log.xml"]
     artifacts:
       objects:
-        location: gs://pytest_bucket
+        location: gs://pytest-bucket-artifacts/
         paths:
           - test_log.xml
     pythonPackages:
-      - repository: "https://europe-west1-python.pkg.dev/bit-bpcesi-hu6-sbx/package-store
+      - repository: "https://europe-west1-python.pkg.dev/bit-bpcesi-hu6-sbx/package-store"
         paths: ["dist/*"]
   
 
