--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -7,7 +7,7 @@ steps:
     args: ["-m","pip","install","pytest","numpy","pandas"]
   - name: python
     entrypoint: python
-    args: ["-m","pytest","--junitxml=test_log.xml"]
+    args: ["-m","pytest","test"]
 artifacts:
   objects:
     location: gs://pytest-bucket-artifacts/
