--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,3 +1,4 @@
+image: docker.io/library/python:latest
 steps:
   - name: python
     entrypoint: python
@@ -10,7 +11,7 @@ steps:
     args: 
     - '-c'
     - |
-          SET PATH=/usr/local/bin/python;%PATH%
+          export PATH=/usr/local/bin/python:$PATH
           pipenv shell
           pipenv install pytest pandas numpy
   - name: python
