--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,4 +1,5 @@
-images: docker.io/library/python:latest
+images: 
+- docker.io/library/python:latest
 steps:
   - name: python
     entrypoint: python
