--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -4,9 +4,15 @@ steps:
   - name: python
     entrypoint: python
     args:  ["-m","pip","install","--upgrade","pip"]
-  - name: python
-    entrypoint: python
-    args: ["-m","pip","install","pipenv","pytest","pandas","numpy"]
+  - name: bash
+    entrypoint: bash
+    args: 
+    - '-c'
+    - |
+          python -m pip install --user virtualenv
+          python -m venv /usr/local/bin/virtualenv
+          source /usr/local/bin/virtualenv/bin/activate
+          pip install pytest pandas numpy
   - name: python
     entrypoint: python
     args: ["-m","pytest","test"]
