--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -9,6 +9,7 @@ steps:
     args: 
     - '-c'
     - |
+          export PATH="$PATH:/usr/local/bin/python"
           python -m pip install --user virtualenv
           python -m venv /usr/local/bin/virtualenv
           source /usr/local/bin/virtualenv/bin/activate
