--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -4,12 +4,12 @@ steps:
   - name: python
     entrypoint: python
     args:  ["-m","pip","install","--upgrade","pip"]
+  - name: python
+    entrypoint: python
+    args:  ["-m","pip","install","--user","virtualenv"]
  - name: python
     entrypoint: python
     args:  ["-m","venv","/usr/local/bin/virtualenv"]
- - name: bash
-    entrypoint: bash
-    args:  source /usr/local/bin/virtualenv/bin/activate
   - name: python
     entrypoint: python
     args:  ["-m","pip","install","pytest","pandas","numpy"]
