--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -10,7 +10,10 @@ steps:
     args: ["-m","venv","/usr/local/bin/virtualenv"]
   - name : bash
     entrypoint: bash
-    args: source /usr/local/bin/virtualenv/bin/activate
+    args: 
+    - '-c'
+    - |
+          source /usr/local/bin/virtualenv/bin/activate
 artifacts:
   objects:
     location: gs://pytest-bucket-artifact/
