--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -8,13 +8,16 @@ steps:
   - name: python
     entrypoint: python
     args: ["-m","venv","./virtualenv"]
-  - name : bash
+  - name: bash
     entrypoint: bash
     args: 
     - '-c'
     - |
           ls -l
           source ./virtualenv/bin/activate
+  - name: python
+    entrypoint: python
+    args: ["-m","pip","install","pytest","pandas","numpy"]
 artifacts:
   objects:
     location: gs://pytest-bucket-artifact/
