--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -23,8 +23,8 @@ steps:
     args: 
     - '-c'
     - |
-          ls -l
-          pytest test
+          ls -l ./virtualenv/bin
+          ./virtualenv/bin/python -m pytest test
 artifacts:
   objects:
     location: gs://pytest-bucket-artifact/
