--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -22,7 +22,7 @@ steps:
     entrypoint: /bin/sh
     args: 
     - '-c'
-    - 'pytest test/test.py'
+    - 'python -m pytest test/test.py'
 artifacts:
   objects:
     location: gs://pytest-bucket-artifact/
